Display more info on heat tab for heaters, and display a heat tab on all the tabs of the fusion reactor (https://github.com/mekanism/Mekanism-Feature-Requests/issues/440). Also add a heat tab to the fission reactor stat's tab and fix the fusion reactor not syncing enough data on the stats tab